// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/Typography/Link ActiveStates smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div>
    <h3 class="text-lg font-medium mb-2">
      Active State Examples
    </h3>
    <div class="flex gap-4">
      <a href="/dashboard"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-layout-dashboard inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="LayoutDashboard"
          >
            <rect width="7"
                  height="9"
                  x="3"
                  y="3"
                  rx="1"
            >
            </rect>
            <rect width="7"
                  height="5"
                  x="14"
                  y="3"
                  rx="1"
            >
            </rect>
            <rect width="7"
                  height="9"
                  x="14"
                  y="12"
                  rx="1"
            >
            </rect>
            <rect width="7"
                  height="5"
                  x="3"
                  y="16"
                  rx="1"
            >
            </rect>
          </svg>
          Dashboard
        </span>
      </a>
      <a href="/settings"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-settings inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="Settings"
          >
            <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915">
            </path>
            <circle cx="12"
                    cy="12"
                    r="3"
            >
            </circle>
          </svg>
          Settings
        </span>
      </a>
      <a href="/profile"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-user inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="User"
          >
            <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2">
            </path>
            <circle cx="12"
                    cy="7"
                    r="4"
            >
            </circle>
          </svg>
          Profile
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Exact Match vs Partial Match
    </h3>
    <div class="flex gap-4">
      <a href="/products"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-shopping-cart inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ShoppingCart"
          >
            <circle cx="8"
                    cy="21"
                    r="1"
            >
            </circle>
            <circle cx="19"
                    cy="21"
                    r="1"
            >
            </circle>
            <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12">
            </path>
          </svg>
          Products (Partial Match)
        </span>
      </a>
      <a href="/products"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-shopping-cart inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ShoppingCart"
          >
            <circle cx="8"
                    cy="21"
                    r="1"
            >
            </circle>
            <circle cx="19"
                    cy="21"
                    r="1"
            >
            </circle>
            <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12">
            </path>
          </svg>
          Products (Exact Match)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Components/Typography/Link Default smoke-test 1`] = `
<a href="/example"
   class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
   id="_r_ID_"
>
  <span class="group flex gap-1 items-center whitespace-nowrap">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
         aria-hidden="true"
         id="ArrowRight"
    >
      <path d="M5 12h14">
      </path>
      <path d="m12 5 7 7-7 7">
      </path>
    </svg>
    Internal Link
  </span>
</a>
`;

exports[`Components/Typography/Link DownloadLinks smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <h3 class="text-lg font-medium mb-2">
    Download Links
  </h3>
  <div class="flex gap-4">
    <a href="/files/document.pdf"
       class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base underline underline-offset-3 hover:no-underline text-primary-foreground"
       id="_r_ID_"
    >
      <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="14"
             height="14"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-download inline-flex transition-transform group-hover:translate-x-0.5"
             aria-hidden="true"
             id="Download"
        >
          <path d="M12 15V3">
          </path>
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4">
          </path>
          <path d="m7 10 5 5 5-5">
          </path>
        </svg>
        Download PDF
      </span>
    </a>
    <a href="/files/presentation.pptx"
       class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base underline underline-offset-3 hover:no-underline text-secondary-foreground"
       id="_r_ID_"
    >
      <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="14"
             height="14"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-download inline-flex transition-transform group-hover:translate-x-0.5"
             aria-hidden="true"
             id="Download"
        >
          <path d="M12 15V3">
          </path>
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4">
          </path>
          <path d="m7 10 5 5 5-5">
          </path>
        </svg>
        Download Presentation
      </span>
    </a>
    <a href="/files/data.xlsx"
       class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base underline underline-offset-3 hover:no-underline text-destructive-foreground"
       id="_r_ID_"
    >
      <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="14"
             height="14"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-download inline-flex transition-transform group-hover:translate-x-0.5"
             aria-hidden="true"
             id="Download"
        >
          <path d="M12 15V3">
          </path>
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4">
          </path>
          <path d="m7 10 5 5 5-5">
          </path>
        </svg>
        Download Spreadsheet
      </span>
    </a>
  </div>
</div>
`;

exports[`Components/Typography/Link External smoke-test 1`] = `
<a href="https://example.com"
   class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
   target="_blank"
   rel="noopener noreferrer"
   id="_r_ID_"
>
  <span class="group flex gap-1 items-center whitespace-nowrap">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
         aria-hidden="true"
         id="ArrowRight"
    >
      <path d="M5 12h14">
      </path>
      <path d="m12 5 7 7-7 7">
      </path>
    </svg>
    External Link
  </span>
</a>
`;

exports[`Components/Typography/Link ExternalLinks smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div>
    <h3 class="text-lg font-medium mb-2">
      External Link Types
    </h3>
    <div class="flex gap-4">
      <a href="https://example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-external-link inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ExternalLink"
          >
            <path d="M15 3h6v6">
            </path>
            <path d="M10 14 21 3">
            </path>
            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6">
            </path>
          </svg>
          Website Link
        </span>
      </a>
      <a href="mailto:info@example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-mail inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="Mail"
          >
            <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7">
            </path>
            <rect x="2"
                  y="4"
                  width="20"
                  height="16"
                  rx="2"
            >
            </rect>
          </svg>
          Email Link
        </span>
      </a>
      <a href="tel:+1234567890"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-phone inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="Phone"
          >
            <path d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384">
            </path>
          </svg>
          Phone Link
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Custom External Props
    </h3>
    <div class="flex gap-4">
      <a href="https://example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_self"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Open in Same Tab
        </span>
      </a>
      <a href="https://example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="nofollow"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          No Follow Link
        </span>
      </a>
      <a href="/internal"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-external-link inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ExternalLink"
          >
            <path d="M15 3h6v6">
            </path>
            <path d="M10 14 21 3">
            </path>
            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6">
            </path>
          </svg>
          Force External
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Components/Typography/Link LinkVariants smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <div>
    <h3 class="text-lg font-medium mb-2">
      Variant Styles
    </h3>
    <div class="flex gap-4">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Default Link
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-info-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Muted Link
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-destructive-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Destructive Link
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Size Options
    </h3>
    <div class="flex gap-4 items-baseline">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-sm no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Small Link
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Default Size
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-lg no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="20"
               height="20"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Large Link
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Underline Styles
    </h3>
    <div class="flex gap-4">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          No Underline
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Hover Underline
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base underline underline-offset-3 hover:no-underline text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Always Underline (disappears on hover)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Components/Typography/Link ScrollBehavior smoke-test 1`] = `
<div class="flex flex-col gap-4">
  <h3 class="text-lg font-medium mb-2">
    Scroll Behavior
  </h3>
  <p class="text-muted-foreground mb-4">
    The
    <code>
      scroll
    </code>
    prop controls whether the page should scroll to the top when navigating to a new route.
  </p>
  <div class="flex gap-4">
    <a href="/example"
       class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
       id="_r_ID_"
    >
      <span class="group flex gap-1 items-center whitespace-nowrap">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="14"
             height="14"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-arrow-up inline-flex transition-transform group-hover:translate-x-0.5"
             aria-hidden="true"
             id="ArrowUp"
        >
          <path d="m5 12 7-7 7 7">
          </path>
          <path d="M12 19V5">
          </path>
        </svg>
        With Scroll (default)
      </span>
    </a>
    <a href="/example"
       class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
       id="_r_ID_"
    >
      <span class="group flex gap-1 items-center whitespace-nowrap">
        <svg xmlns="http://www.w3.org/2000/svg"
             width="14"
             height="14"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
             aria-hidden="true"
             id="ArrowRight"
        >
          <path d="M5 12h14">
          </path>
          <path d="m12 5 7 7-7 7">
          </path>
        </svg>
        Without Scroll
      </span>
    </a>
  </div>
</div>
`;

exports[`Components/Typography/Link WithIcons smoke-test 1`] = `
<div class="flex flex-col gap-6">
  <div>
    <h3 class="text-lg font-medium mb-2">
      Icon Visibility
    </h3>
    <div class="flex gap-4">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          With Icon (showIcon=true)
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          Without Icon (showIcon=false)
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Icon Positions
    </h3>
    <div class="flex gap-4">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Icon at Start
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap flex-row-reverse">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-arrow-right inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ArrowRight"
          >
            <path d="M5 12h14">
            </path>
            <path d="m12 5 7 7-7 7">
            </path>
          </svg>
          Icon at End
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Icon Types
    </h3>
    <div class="flex gap-4">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-house inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="House"
          >
            <path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8">
            </path>
            <path d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z">
            </path>
          </svg>
          House
        </span>
      </a>
      <a href="https://example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-external-link inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="ExternalLink"
          >
            <path d="M15 3h6v6">
            </path>
            <path d="M10 14 21 3">
            </path>
            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6">
            </path>
          </svg>
          External
        </span>
      </a>
      <a href="mailto:info@example.com"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-mail inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="Mail"
          >
            <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7">
            </path>
            <rect x="2"
                  y="4"
                  width="20"
                  height="16"
                  rx="2"
            >
            </rect>
          </svg>
          Email
        </span>
      </a>
      <a href="tel:+1234567890"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         target="_blank"
         rel="noopener noreferrer"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-phone inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="Phone"
          >
            <path d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384">
            </path>
          </svg>
          Call
        </span>
      </a>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-medium mb-2">
      Icon Sizes
    </h3>
    <div class="flex gap-4 items-baseline">
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-sm no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="14"
               height="14"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-file-text inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="FileText"
          >
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            </path>
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            </path>
            <path d="M10 9H8">
            </path>
            <path d="M16 13H8">
            </path>
            <path d="M16 17H8">
            </path>
          </svg>
          Small
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-file-text inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="FileText"
          >
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            </path>
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            </path>
            <path d="M10 9H8">
            </path>
            <path d="M16 13H8">
            </path>
            <path d="M16 17H8">
            </path>
          </svg>
          Default
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-lg no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="20"
               height="20"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-file-text inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="FileText"
          >
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            </path>
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            </path>
            <path d="M10 9H8">
            </path>
            <path d="M16 13H8">
            </path>
            <path d="M16 17H8">
            </path>
          </svg>
          Large
        </span>
      </a>
      <a href="/example"
         class="transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-base no-underline hover:underline underline-offset-3 text-primary-foreground"
         id="_r_ID_"
      >
        <span class="group flex gap-1 items-center whitespace-nowrap">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="24"
               height="24"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-file-text inline-flex transition-transform group-hover:translate-x-0.5"
               aria-hidden="true"
               id="FileText"
          >
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            </path>
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            </path>
            <path d="M10 9H8">
            </path>
            <path d="M16 13H8">
            </path>
            <path d="M16 17H8">
            </path>
          </svg>
          Custom Size
        </span>
      </a>
    </div>
  </div>
</div>
`;
